abuse and protection
